--- a/index.html
+++ b/index.html
@@ -586,7 +586,26 @@ const App = () => {
       setMenuOpen(false);
       const content = {
           about: { title: "About Us", body: (<p>This Daily Bible & Prayer Hub was created to provide a peaceful and accessible space for daily devotion, reading, and reflection. Our mission is to help you connect with the Word of God anytime, anywhere.</p>) },
-          privacy: { title: "Privacy Policy", body: (<div className="text-sm space-y-2"><p>We respect your privacy. This app stores all your data (bookmarks, prayers, settings) locally on your device using your browser's local storage. No personal data is ever sent to or stored on any external server. Your journal is yours alone.</p><p>We use external APIs for Bible text and daily verses, but these requests are anonymous and do not contain any of your personal information.</p></div>) },
+          privacy: { title: "Privacy Policy", body: (<div className="text-sm space-y-2"><p>We respect your privacy. All your data (bookmarks, prayers, settings) is stored locally on your device. Nothing you enter is sent to or stored on any external server—your journal is yours alone.
+
+We use external APIs for Bible text and daily verses, but these requests are anonymous and do not contain your personal information.
+
+Ads and Cookies
+This app uses Google AdSense to show ads. Google may use cookies to:
+	•	Show personalized ads
+	•	Limit how often you see an ad
+	•	Measure ad performance
+
+Google may collect non-personal info like device type, browser, page views, and general location. We do not collect personal information.
+
+To opt out of personalized ads, visit: https://www.google.com/settings/ads
+More info: https://policies.google.com/technologies/ads
+
+Third-Party Links
+We may link to other websites. We are not responsible for their privacy practices.
+
+Consent
+By using this app, you agree to this privacy policy.</p><p>We use external APIs for Bible text and daily verses, but these requests are anonymous and do not contain any of your personal information.</p></div>) },
           terms: { title: "Terms of Use", body: (<p>This application is provided free of charge for personal, non-commercial use. You agree not to misuse the service or its content. The Bible translations are provided under copyright from their respective publishers.</p>) },
       };
       setModalContent(content[type]);
