--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daily Bible & Prayer Hub</title>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7678367570889179"
+     crossorigin="anonymous"></script>
     <!-- PWA Manifest -->
     <link rel="manifest" href="#app-manifest">
     <meta name="theme-color" content="#3b82f6">
