--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daily Bible & Prayer Hub</title>
+    <meta name="monetag" content="df12948db4b1e2e23f0f02d49e7bd061">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7678367570889179"
      crossorigin="anonymous"></script>
     <!-- PWA Manifest -->
